--- a/index.html
+++ b/index.html
@@ -3,6 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ 
+  <!-- Etiquetas para compartir -->
+  <meta property="og:title" content="🧊 VIGILANTE FRÍO 360° 🧊">
+  <meta property="og:description" content="Convierte cualquier equipo de refrigeración en un sistema inteligente con WebControl+IA.   Refrigeradores que avisan antes de fallar. Cámaras comerciales que se autoregulan. Sistemas industriales que se diagnostican solos.">
+  <meta property="og:image" content="https://lasemillaonline.github.io/frigorifico360/imagen01.jpg">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://lasemillaonline.github.io/frigorifico360/">
+ 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+ 
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vigilante Frío 360° | Sistema de Monitoreo Inteligente con WebControl+IA</title>
   <style>
     body { font-family: 'Segoe UI', sans-serif; line-height: 1.6; background: #eef7fb; padding: 2rem; color: #1c1c1c; }
